// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders with defaultProps 1`] = `
<img
  className="ax-image ax-space--x4"
  src="/image.png"
/>
`;

exports[`Image renders with extra props 1`] = `
<img
  alt="Lorem"
  className="ax-image ax-space--x4"
  src="/image.png"
  title="Lorem"
/>
`;
